2025-10-14T01:39:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18482835154 # 1281
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-14
* notice: last 14d: unq all: 61 115
* notice: prev accum: outdated-unq outdated-all / unq all: 4841 9740 / 4926 9855
* notice: next accum: outdated-unq outdated-all / unq all: 4842 9741 / 4927 9856
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-30] / [2025-10-13]

2025-10-13T12:43:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18466184563 # 1280
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-13
* notice: last 14d: unq all: 61 115
* notice: prev accum: outdated-unq outdated-all / unq all: 4837 9736 / 4926 9855
* notice: next accum: outdated-unq outdated-all / unq all: 4841 9740 / 4926 9855
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-29] / []

2025-10-13T01:45:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18452781957 # 1279
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-13
* notice: last 14d: unq all: 63 118
* notice: prev accum: outdated-unq outdated-all / unq all: 4837 9736 / 4925 9854
* notice: next accum: outdated-unq outdated-all / unq all: 4837 9736 / 4926 9855
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2025-09-29 2025-10-12]

2025-10-12T12:38:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18444039243 # 1278