@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-14T01:39:05Z",
+  "timestamp" : "2025-10-14T12:47:02Z",
   "count_outdated" : 9741,
   "uniques_outdated" : 4842,
-  "count" : 9856,
-  "uniques" : 4927,
+  "count" : 9862,
+  "uniques" : 4932,
   "clones" : [
     {
       "timestamp": "2025-10-01T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-14T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 5 ],
+      "uniques_decinc": [ 0, 5 ]
     }
   ]
 }
