@@ -1,6 +1,6 @@
 {
-  "count": 115,
-  "uniques": 61,
+  "count": 121,
+  "uniques": 64,
   "clones": [
     {
       "timestamp": "2025-10-01T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2025-10-13T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-14T00:00:00Z",
+      "count": 6,
+      "uniques": 5
     }
   ]
 }
